@@ -1,10 +1,10 @@
 '\"
-'\" Copyright (c) 2007 Donal K. Fellows
+'\" Copyright (c) 2007-2008 Donal K. Fellows
 '\"
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\"
-'\" RCS: @(#) $Id: define.n,v 1.12 2008/05/16 14:21:58 dkf Exp $
+'\" RCS: @(#) $Id: define.n,v 1.13 2008/06/28 23:59:54 dkf Exp $
 '\"
 .so man.macros
 .TH define n 0.3 TclOO "TclOO Commands"
