@@ -1,10 +1,10 @@
 '\"
-'\" Copyright (c) 2007 Donal K. Fellows
+'\" Copyright (c) 2007-2008 Donal K. Fellows
 '\"
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\"
-'\" RCS: @(#) $Id: my.n,v 1.3 2008/03/26 09:48:46 dkf Exp $
+'\" RCS: @(#) $Id: my.n,v 1.4 2008/06/28 23:59:54 dkf Exp $
 '\"
 .so man.macros
 .TH my n 0.1 TclOO "TclOO Commands"
