@@ -1,10 +1,10 @@
 '\"
-'\" Copyright (c) 2007 Donal K. Fellows
+'\" Copyright (c) 2007-2008 Donal K. Fellows
 '\"
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\"
-'\" RCS: @(#) $Id: next.n,v 1.5 2008/06/19 21:32:48 dkf Exp $
+'\" RCS: @(#) $Id: next.n,v 1.6 2008/06/28 23:59:54 dkf Exp $
 '\"
 .so man.macros
 .TH next n 0.1 TclOO "TclOO Commands"
