@@ -1,10 +1,10 @@
 '\"
-'\" Copyright (c) 2007 Donal K. Fellows
+'\" Copyright (c) 2007-2008 Donal K. Fellows
 '\"
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\"
-'\" RCS: @(#) $Id: ooInfo.n,v 1.6 2008/05/29 09:33:19 dkf Exp $
+'\" RCS: @(#) $Id: ooInfo.n,v 1.7 2008/06/28 23:59:54 dkf Exp $
 '\"
 .so man.macros
 .TH ooInfo n 0.1 TclOO "TclOO Commands"
