@@ -4,12 +4,12 @@
  *	This file contains the method call chain management code for the
  *	object-system core.
  *
- * Copyright (c) 2005-2006 by Donal K. Fellows
+ * Copyright (c) 2005-2008 by Donal K. Fellows
  *
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclOOCall.c,v 1.24 2008/06/19 21:02:30 dkf Exp $
+ * RCS: @(#) $Id: tclOOCall.c,v 1.25 2008/06/28 23:59:54 dkf Exp $
  */
 
 #ifdef HAVE_CONFIG_H
