@@ -4,12 +4,12 @@
  *	This file contains the implementation of the ::oo::define command,
  *	part of the object-system core (NB: not Tcl_Obj, but ::oo).
  *
- * Copyright (c) 2006 by Donal K. Fellows
+ * Copyright (c) 2006-2008 by Donal K. Fellows
  *
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclOODefineCmds.c,v 1.18 2008/05/25 11:29:39 dkf Exp $
+ * RCS: @(#) $Id: tclOODefineCmds.c,v 1.19 2008/06/28 23:59:54 dkf Exp $
  */
 
 #ifdef HAVE_CONFIG_H
